fixing layout issues

--- a/frontend/src/AuthorizedPage/CreateOrJoin/CreateOrJoin.css
+++ b/frontend/src/AuthorizedPage/CreateOrJoin/CreateOrJoin.css
@@ -58,7 +58,7 @@ input::placeholder{
 @media (max-width: 720px){
     .CreateOrJoinBox{
         width: 230px;
-        padding-top: 25px;
+        padding-top: 35px;
         padding-left: 0;
     }
     .openCollapse{
